kubernetes/apps/platform/argocd/chart/templates/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argo.czgeeklab.com`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
          scheme: http
  tls:
    secretName: argocd-tls-secret
